--- a/style.css
+++ b/style.css
@@ -168,3 +168,89 @@
             box-shadow: 0px 6px 4px rgba(12, 112, 242, 0.25);
             cursor: pointer;
         }
+
+        /* Footer */
+
+        footer {
+            width: 100%;
+            background-color: var(--azul-dnc);
+        }
+
+        footer .linha1{
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+        }
+
+        footer ul{
+            list-style: none;
+            margin: 0px;
+            padding: 0px;
+        }
+
+        footer nav {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        footer h5 {
+            text-align: center;
+            color: white;
+            font-weight: 800;
+            font-size: 25px;
+            font-family: var(--fonte-padrao);
+            background-color: var(--preto-dnc);
+            border-radius: 10px;
+
+            padding: 13px 13px 13px 13px;
+            margin-bottom: 15px;
+        }
+
+        footer ul li{
+            text-align: center;
+            color: white;
+            font-weight: 600;
+            font-size: 25px;
+            font-family: var(--fonte-padrao);
+            margin: 30px 30px 30px 30px;
+        }
+
+        footer ul li a{
+            color: white;
+            text-decoration: none;
+        }
+
+        footer ul li a:hover {
+            color: var(--cinza-hover);
+        }
+
+        footer .endereco {
+            color: white;
+            font-weight: 600;
+            font-size: 25px;
+            font-family: var(--fonte-padrao);
+            text-align: center;
+            width: 28%;
+        }
+
+        footer .linha2 {
+            display: flex;
+            justify-content: center;
+            margin: 0px;
+            padding: 10px;
+        }
+
+        footer .linha2 a {
+            font-family: var(--fonte-padrao);
+            font-size: 25px;
+            font-weight: 600;
+            color: white;
+            text-decoration: none;
+            padding: 5px;
+            border-right: 3px solid white;
+        }
+
+        footer .linha2 a:hover {
+            color: var(--cinza-hover);
+        }
