--- a/style.css
+++ b/style.css
@@ -169,17 +169,19 @@
             cursor: pointer;
         }
 
-        /* Footer */
+        /* Footer (os codigos que foram comentados por que não deram certo para min) */
 
         footer {
             width: 100%;
             background-color: var(--azul-dnc);
+            margin: 0px;
+            padding: 0px;
         }
 
         footer .linha1{
             display: flex;
             justify-content: space-around;
-            align-items: center;
+            /*align-items: center;*/
         }
 
         footer ul{
@@ -192,28 +194,33 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+
+            /*height: 330px;*/
         }
 
         footer h5 {
             text-align: center;
             color: white;
             font-weight: 800;
-            font-size: 25px;
+            font-size: 18px;
             font-family: var(--fonte-padrao);
             background-color: var(--preto-dnc);
             border-radius: 10px;
 
-            padding: 13px 13px 13px 13px;
-            margin-bottom: 15px;
+            padding: 10px 10px 10px 10px;
+            margin-bottom: 10px;
+
+            background-size: auto; /* ajuste fora do que foi passado pelo professor */
         }
 
         footer ul li{
             text-align: center;
             color: white;
             font-weight: 600;
-            font-size: 25px;
+            font-size: 18px;
             font-family: var(--fonte-padrao);
-            margin: 30px 30px 30px 30px;
+
+            margin: 20px 20px 20px 20px;
         }
 
         footer ul li a{
@@ -228,27 +235,35 @@
         footer .endereco {
             color: white;
             font-weight: 600;
-            font-size: 25px;
+            font-size: 18px;
             font-family: var(--fonte-padrao);
-            text-align: center;
+            /*text-align: center;*/
             width: 28%;
+            align-items: center;
+            margin-top: 130px; /* ajuste fora do que foi passado pelo professor */
+            
         }
-
+    
         footer .linha2 {
+            /*text-align: center;*/
+            /*height: 35px;*/
             display: flex;
             justify-content: center;
-            margin: 0px;
-            padding: 10px;
+            /*padding: 10px;*/
+            
+            
+           
         }
 
         footer .linha2 a {
+            
             font-family: var(--fonte-padrao);
-            font-size: 25px;
+            font-size: 18px;
             font-weight: 600;
             color: white;
             text-decoration: none;
             padding: 5px;
-            border-right: 3px solid white;
+            /*text-align: center;*/
         }
 
         footer .linha2 a:hover {
