--- a/style.css
+++ b/style.css
@@ -269,3 +269,66 @@
         footer .linha2 a:hover {
             color: var(--cinza-hover);
         }
+
+@media only screen and (max-width: 600px){
+
+    /* Menu */
+
+    #principal{
+        flex-direction: column;
+        height: auto;
+    }
+
+    #menu{
+        flex-direction: column;
+        width: 100%;
+        margin: 0px;
+    }
+
+    #menu a{
+        display: flex;
+        height: 50px;
+        align-items: center;
+
+    }
+
+    #principal button{
+        width: 100%;
+        margin: 0px;
+    }
+
+    /* Section */
+
+    section h1 {
+        font-size: 38px;
+    } 
+
+    section h2{
+        font-size: 28px;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+
+    form{
+        width: 95%;
+        font-size: 20px;
+    }
+
+    .checkbox-itens label {
+        font-size: 15px;
+    }
+
+    /* Footer */
+
+    footer .linha1{
+        flex-direction: column;
+    }
+    
+    footer .endereco{
+        width: 95%;
+        display: flex;
+        text-align: center;
+        margin-bottom: 30px;
+        margin-left: 3%;   
+    }
+}
